--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+    .example-wrapper { margin: 1em auto; max-width: 800px; height: 100%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
@@ -12,7 +12,7 @@
     <h1>Home</h1>
 
     {% if app.user %}
-        <p>Welcome Home {{ app.user.userIdentifier }} !</p>
+        <p>Welcome Home {{ app.user.firstname }} {{ app.user.name }} !</p>
 
         {% else %}
         <p>Welcome</p>        
