--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -17,6 +17,10 @@
     <p>Vous êtes bien administrateur</p>
 
     <p>Users :</p>
+    
+    <button class='btn'>
+        <a href='/register'>Ajouter un utilisateur</a>
+    </button>
     <ul>
 
         <li class="wrap_li imp">
