--- a/templates/event/index.html.modifevent.twig
+++ b/templates/event/index.html.modifevent.twig
@@ -13,7 +13,7 @@
     .btn {background-color: red; color: white;}
 </style>
 <div class="example-wrapper">
-    <h1>Modif User</h1>
+    <h1>Modif Evènement</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
