--- a/templates/gestion/index.html.twig
+++ b/templates/gestion/index.html.twig
@@ -6,10 +6,18 @@
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    .btn {background-color: red; color: white;}
 </style>
 
 <div class="example-wrapper">
     <h1>Gestion Page</h1>
     <p>Page réservé aux ORGANISATEURS</p>
+
+    <button class='btn'>
+        <a href='/event'>Voir les évènements</a>
+    </button>
+    <button class='btn'>
+        <a href='/event/add'>Ajouter un évènement</a>
+    </button>
 </div>
 {% endblock %}
