--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -3,68 +3,55 @@
 {% block title %}Hello AdminController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 1000px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-    .wrap_li {display: flex; justify-content: space-between; border-bottom: 1px solid black;}
-    .wrap_div {display: flex; justify-content: right; gap: 1rem; width: 327px;}
-    .text_role {color: red;}
-    .imp {background-color: gray; font-weight: bold; color: black;}
-    .btn {background-color: red; color: white;}
-</style>
 <div class="example-wrapper">
     <h1>Page secrete</h1>
     <p>Vous êtes bien administrateur</p>
-
-    <p>Users :</p>
     
     <button class='btn'>
         <a href='/register'>Ajouter un utilisateur</a>
     </button>
-    <ul>
 
-        <li class="wrap_li imp">
-            <p>Id</p>
-            <p>Email</p>
-            <p>Prénom Nom</p>
-            <p>Actif</p>
+    <h2>Utilisateurs : </h2>
+
+    <table>
+        <thead>
+            <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Email</th>
+            <th scope="col">Prénom</th>
+            <th scope="col">Nom</th>
+            <th scope="col">Rôles</th>
+            <th scope="col">Actif</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for user in users %}
+            <tr>
+                <th scope="row">{{user.id}}</th>
+                <td>{{user.email}}</td>
+                <td>{{user.firstname}}</td>
+                <td>{{user.name}}</td>
+                <td>
+                {% for role in user.roles %}
+                    {% if role == 'ROLE_USER' %}
+                    <p class="text_role">Utilisateur</p>
+                    {% elseif role == 'ROLE_ADMIN' %}
+                    <p class="text_role">Administrateur</p>
+                    {% elseif role == 'ROLE_ORGANISATEUR' %}
+                    <p class="text_role">Organisateur</p>
+                    {% endif %}
+                {% endfor %}
+                </td>
                 
-            <div class="wrap_div">
-                <p>Rôles</p>
-            </div>
-        </li>
-        {% for user in users %}
-            <li class="wrap_li">
-                <p>{{ user.id }}</p>
-
-                <p>{{ user.email }}</p>
-
-                <p>{{ user.firstname }} {{ user.name }}</p>
-
                 {% if user.actif == false %}
-                    <p>Non</p>
+                    <td class="txt_priv">Non</td>
                 {% else %}
-                    <p>Oui</p>
+                    <td class="txt_pub">Oui</td>
                 {% endif %}
-                
-                <div class="wrap_div">
-                    {% for role in user.roles %}
-                        
-                        {% if role == 'ROLE_USER' %}
-                        <p class="text_role">Utilisateur</p>
-                        {% elseif role == 'ROLE_ADMIN' %}
-                        <p class="text_role">Administrateur</p>
-                        {% elseif role == 'ROLE_ORGANISATEUR' %}
-                        <p class="text_role">Organisateur</p>
-                        {% endif %}
-                    {% endfor %}
-                </div>
-
-                <button class="btn">
-                    <a href="{{ path('app_admin_modification', {'id': user.id}) }}">Modif</a>
-                </button>
-            </li>
-        {% endfor %}
-    </ul>
+                <td><button class="btn"><a href="{{ path('app_admin_modification', {'id': user.id}) }}">Modif</a></button></td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </div>
 {% endblock %}
