--- a/templates/event/index.html.addevent.twig
+++ b/templates/event/index.html.addevent.twig
@@ -3,27 +3,20 @@
 {% block title %}Hello AdminController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 1000px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-    .wrap_li {display: flex; justify-content: space-between; border-bottom: 1px solid black;}
-    .wrap_div {display: flex; justify-content: right; gap: 1rem; width: 327px;}
-    .text_role {color: red;}
-    .imp {background-color: gray; font-weight: bold; color: black;}
-    .btn {background-color: red; color: white;}
-</style>
 <div class="example-wrapper">
     <h1>Ajouter un Evènement</h1>
 
     {{ form_errors(addEventForm) }}
 
     {{ form_start(addEventForm) }}
-        {{ form_row(addEventForm.datetimeStart) }}
-        {{ form_row(addEventForm.datetimeEnd) }}
-        {{ form_row(addEventForm.title) }}
+        {{ form_row(addEventForm.datetime_start) }}
+        {{ form_row(addEventForm.datetime_end) }}
+        {{ form_row(addEventForm.titre) }}
         {{ form_row(addEventForm.description) }}
         {{ form_row(addEventForm.visibility) }}
+        {{ form_row(addEventForm.users) }}
 
+        <p class="error">{{ error }}</p>
         <button type="submit" class="btn">Add Event</button>
     {{ form_end(addEventForm) }}
 </div>
