--- a/templates/event/index.html.modifevent.twig
+++ b/templates/event/index.html.modifevent.twig
@@ -3,20 +3,14 @@
 {% block title %}Hello AdminController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 1000px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-    .wrap_li {display: flex; justify-content: space-between; border-bottom: 1px solid black;}
-    .wrap_div {display: flex; justify-content: right; gap: 1rem; width: 327px;}
-    .text_role {color: red;}
-    .imp {background-color: gray; font-weight: bold; color: black;}
-    .btn {background-color: red; color: white;}
-</style>
 <div class="example-wrapper">
     <h1>Modif Evènement</h1>
 
+
     {{ form_start(form) }}
         {{ form_widget(form) }}
+        <p class="error">{{ error }}</p>
+        <button type="submit" class="btn">Modify Event</button>
     {{ form_end(form) }}
 </div>
 {% endblock %}
