--- a/templates/gestion/index.html.twig
+++ b/templates/gestion/index.html.twig
@@ -23,6 +23,7 @@
             <th scope="col">Description</th>
             <th scope="col">Visibilité</th>
             <th scope="col">Users</th>
+            <th scope="col">Modif</th>
             </tr>
         </thead>
         <tbody>
