--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,12 +7,15 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         {% block stylesheets %}
         <style>
-        body {height: 75vh; margin: 0;}
+        body {min-height: 100vh; margin: 0; font-family: sans-serif;}
         h1, p {text-align: center;}
-        nav {display: flex; gap: 2rem; background-color: gray; padding: 1.5rem 1.5rem;}
+        .container {height: 100vh; display: flex; flex-direction: column; justify-content: space-between;}
+        nav {display: flex; gap: 2rem; background-color: white; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; padding: 1.5rem 1.5rem;}
         a {text-transform: uppercase; color: white; font-weight: bolder; text-decoration: none;}
+        .link_nav {color: black; background-color: white; padding: .5rem; transition: color .25s ease-in-out, background-color .5s ease-in-out; border-radius: 4px; }
+        .active {color: white; background-color: #3498db;}
         footer {background-color: gray; padding: 1.5rem 1.5rem;}
-        .example-wrapper { margin: 1em auto; max-width: 1000px; width: 95%; font: 18px/1.5 sans-serif; }
+        .example-wrapper { margin: 0 auto; max-width: 1000px; width: 95%; height: 100%; font: 18px/1.5 sans-serif; }
         .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
         .wrap_li {display: flex; justify-content: space-between; border-bottom: 1px solid black;}
         .wrap_div {display: flex; justify-content: right; gap: 1rem; width: 327px;}
@@ -22,77 +25,32 @@
         .txt_priv {color: red;}
         .txt_pub {color: green;}
         .error {color: red; text-align: left;}
-        table {
-    width: 100%;
-    border-collapse: collapse;
-    margin: 20px 0;
-    font-size: 1em;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f9f9f9;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+        table { width: 100%; border-collapse: collapse; margin: 20px 0; font-size: 1em; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f9f9f9; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); }
+        thead { background-color: #2c3e50; color: white; }
+        th, td { padding: 12px 15px; text-align: left; border-bottom: 1px solid #ddd; }
+        th { text-transform: uppercase; letter-spacing: 0.05em; }
+        tbody tr:nth-child(even) { background-color: #f2f2f2; }
+        tbody tr:hover { background-color: #eaeaea; }
+        button.btn { background-color: #3498db; color: white; border: none; padding: 8px 16px; border-radius: 4px; cursor: pointer; transition: background-color 0.3s; }
+        button.none { background-color: gray; color: white; border: none; padding: 8px 16px; border-radius: 4px; transition: background-color 0.3s; }
+        button.btn:hover { background-color: #2980b9; }
+        .txt_priv { color: #e74c3c; font-weight: bold; }
+        .txt_pub { color: #2ecc71; font-weight: bold; }
+        p { margin: 5px 0; }
+        span { padding: .15rem .5rem; color: white; border-radius: 4px;}
+        .admin {background-color: red;}
+        .orga {background-color: orange;}
+        .user {background-color: #3498db;}
+        footer { background-color: #3498db; color: white; }
 
-thead {
-    background-color: #2c3e50;
-    color: white;
-}
+        form {margin: 0 auto; display: flex; flex-direction: column; align-items: center;}
+        #form {width: auto; display: flex; flex-direction: column; gap: 1.5rem;}
+        #form div {width: 100%; display: flex; flex-direction: row; gap: 1.5rem;}
+        #form div input {padding: .5rem; border-radius: 50px; border: 1px solid gray; width: 100%;}
 
-th, td {
-    padding: 12px 15px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-}
-
-th {
-    text-transform: uppercase;
-    letter-spacing: 0.05em;
-}
-
-tbody tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
-
-tbody tr:hover {
-    background-color: #eaeaea;
-    cursor: pointer;
-}
-
-td a {
-    text-decoration: none;
-    color: #3498db;
-}
-
-td a:hover {
-    color: #2980b9;
-}
-
-button.btn {
-    background-color: #3498db;
-    color: white;
-    border: none;
-    padding: 8px 16px;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-button.btn:hover {
-    background-color: #2980b9;
-}
-
-.txt_priv {
-    color: #e74c3c;
-    font-weight: bold;
-}
-
-.txt_pub {
-    color: #2ecc71;
-    font-weight: bold;
-}
-
-p {
-    margin: 5px 0;
-}
+        #add_event_form {width: auto; display: flex; flex-direction: column; gap: 1.5rem;}
+        #add_event_form div {width: 100%; display: flex; flex-direction: row; gap: 1.5rem;}
+        #add_event_form div input {padding: .5rem; border-radius: 50px; border: 1px solid gray; width: 100%;}
         </style>
         {% endblock %}
 
@@ -100,32 +58,37 @@ p {
         {% endblock %}
     </head>
     <body>
-        <nav>
-            <a href="/">Home</a>
-            <a href="/legalsmentions">Mentions Légales</a>
-            
-            {% if is_granted('ROLE_ORGANISATEUR') %}
-            <a href="/gestion">Gestion Page</a>
-            {% endif %}
-            
-            {% if is_granted('ROLE_ADMIN') %}
-                <a href="/admin">Admin Page</a>
-            {% endif %}
+        <div class='container'>
+            <nav>
+                <a class="link_nav {% if app.request.attributes.get('_route') == 'app_index' %}active{% endif %}" href="{{ path('app_index') }}">Home</a>
+                <a class="link_nav {% if app.request.attributes.get('_route') == 'app_legalsmentions' %}active{% endif %}" href="{{ path('app_legalsmentions') }}">Mentions Légales</a>
+                
+                {% if is_granted('ROLE_ORGANISATEUR') %}
+                    <a class="link_nav {% if app.request.attributes.get('_route') == 'app_gestion' %}active{% endif %}" href="{{ path('app_gestion') }}">Gestion Page</a>
+                {% endif %}
+                
+                {% if is_granted('ROLE_ADMIN') %}
+                    <a class="link_nav {% if app.request.attributes.get('_route') == 'app_admin' %}active{% endif %}" href="{{ path('app_admin') }}">Admin Page</a>
+                {% endif %}
 
-            {% if app.user %}
-                <a href="/logout">Logout</a>
+                {% if is_granted('ROLE_USER') %}
+                    <a class="link_nav {% if app.request.attributes.get('_route') == 'app_profil' %}active{% endif %}" href="{{ path('app_profil') }}">Profil</a>
+                {% endif %}
 
-                {% else %}
-                    <a href="/login">Se Connecter</a>
-                    <a href="/register">S'enregistrer</a>
+                {% if app.user %}
+                    <a class='link_nav' href="/logout">Logout</a>
 
-            {% endif %}
-        </nav>
+                    {% else %}
+                        <a class="link_nav {% if app.request.attributes.get('_route') == 'app_login' %}active{% endif %}" href="{{ path('app_login') }}">Se Connecter</a>
+                        <a class="link_nav {% if app.request.attributes.get('_route') == 'app_register' %}active{% endif %}" href="{{ path('app_register') }}">S'enregistrer</a>
+                {% endif %}
+            </nav>
 
-        {% block body %}{% endblock %}
+            {% block body %}{% endblock %}
 
-        <footer>
-            <p>Copyright 2024 © - Josué Perrault</p>
-        </footer>
+            <footer>
+                <p>Copyright 2024 © - Josué Perrault</p>
+            </footer>
+        </div>
     </body>
 </html>
