--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,6 @@
 {% block stylesheets %}
 	<style>
 		.container { display: flex; flex-direction: column; height: 100%; justify-content: center; align-items: center; font-family: sans-serif; }
-		img { width: 6rem; }
 		.custom-form { display: flex; justify-content: center; align-items: center; flex-direction: column; width: 75%; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); margin-top: 1.25rem; padding: 1rem; border: 1px solid #E5E7EB;border-radius: 0.375rem; }
 		.form-div { display: flex; justify-content: center; align-items: center; flex-direction: column; width: 100%; }
 		.input-div { width: 100%; display: flex; flex-direction: column; gap: 4px; margin-top: 12px; }
@@ -27,7 +26,6 @@
 
 {% block body %}
 	<div class="container">
-		<img src="./logo2.svg" alt="Logo Icon"/>
 
 		<form method='post' class='custom-form'>
 			<h2>Se connecter</h2>
@@ -50,7 +48,7 @@
 					<div class='input-div'>
 						<label for="password">Mot de passe</label>
 						<input class="custom-input" type="password" name="_password" id="password" class="form-control" placeholder="Mot de passe" autocomplete="current-password" required>
-						<a href="/recover/account" class='link-forgetpassword'>Mot de passe oublié</a>
+						<a href="#" class='link-forgetpassword'>Mot de passe oublié</a>
 					</div>
 
 					{#Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
